apps/checkmk/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: checkmk
  labels:
    app.kubernetes.io/name: checkmk
