apps/checkmk/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: checkmk
  namespace: checkmk
  labels:
    app: checkmk
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: agent-receiver
  selector:
    app: checkmk
