apps/checkmk/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: checkmk
  namespace: checkmk
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`checkmk.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: checkmk
          port: 80
  tls:
    secretName: checkmk-tls
